<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>imi</groupId>
	<artifactId>projEH-OPS5</artifactId>
	<version>1.0</version>
	<name>ProjektEH - OPS5</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<db.name>pmiw21g05_v01</db.name>
		<db.username>pmiw21g05</db.username>
		<db.password>IL6CgkzEMcNY99TD</db.password>
		<db.url>jdbc:mariadb://dbstudents01.imi.uni-luebeck.de:3306/${db.name}</db.url>
		<skip.jooq.generation>true</skip.jooq.generation>
		<jooq.version>3.15.4</jooq.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>main.Main</mainClass>
					<options>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
					</options>
				</configuration>
			</plugin>
			<plugin>
				<!-- 1 - Define plugin artifact coordinates -->
				<groupId>org.jooq</groupId>
				<artifactId>jooq-codegen-maven</artifactId>
				<version>${jooq.version}</version>

				<!-- 2 - The plugin should hook into the generate goal -->
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<!-- 3 - Manage the plugin's dependency in order to connect to MariaDB -->
				<dependencies>
					<dependency>
						<groupId>org.mariadb.jdbc</groupId>
						<artifactId>mariadb-java-client</artifactId>
						<version>3.0.2-rc</version>
						<scope>compile</scope>
					</dependency>
				</dependencies>
				<!-- 4 - Specify the plugin configuration. -->
				<configuration>

					<!-- 5 - A boolean property (or constant) can be specified here to tell the plugin not to do anything -->
					<skip>${skip.jooq.generation}</skip>

					<!-- 6 - JDBC connection parameters -->
					<jdbc>
						<driver>org.mariadb.jdbc.Driver</driver>
						<url>${db.url}</url>
						<user>${db.username}</user>
						<password>${db.password}</password>
					</jdbc>

					<!-- 7 - Generator parameters -->
					<generator>
						<generate>
							<!-- 7.1 - DAOs make everything easier -->
							<daos>true</daos>
						</generate>
						<database>
							<!-- 7.2 - Generate sources for all schema versions -->
							<name>org.jooq.meta.mariadb.MariaDBDatabase</name>
							<includes>.*</includes>
							<inputSchema>${db.name}</inputSchema>
							<forcedTypes>
							<forcedType>
								<name>BOOLEAN</name>
								<includeExpression>.*\.storniert</includeExpression>
								<includeTypes>.*</includeTypes>
								<objectType>ALL</objectType>
							</forcedType>
								<forcedType>
									<name>BOOLEAN</name>
									<includeExpression>.*\.notfall</includeExpression>
									<includeTypes>.*</includeTypes>
									<objectType>ALL</objectType>
								</forcedType>
							</forcedTypes>
						</database>
						<target>
							<!-- 7.3 - Define output directory -->
							<packageName>jooq</packageName>
							<directory>src/main/java/</directory>
						</target>
					</generator>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.26</version>
		</dependency>
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>3.0.1-beta</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi</groupId>
			<artifactId>hapi-base</artifactId>
			<version>2.3</version>
			<type>javadoc</type>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi</groupId>
			<artifactId>hapi-structures-v251</artifactId>
			<version>2.3</version>
			<type>javadoc</type>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi</groupId>
			<artifactId>hapi-base</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi</groupId>
			<artifactId>hapi-structures-v251</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>17</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>17</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>17</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>11.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq</artifactId>
			<version>${jooq.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq-meta</artifactId>
			<version>${jooq.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq-codegen</artifactId>
			<version>${jooq.version}</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>
	</dependencies>
</project>
